# ChangeLog for dev-haskell/hunit
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/hunit/ChangeLog,v 1.30 2008/10/03 23:46:30 fmccor Exp $

  03 Oct 2008; Ferris McCormick <fmccor@gentoo.org> hunit-1.2.0.0.ebuild:
  Sparc stable, Bug #239465.

  15 Jul 2008; Jeroen Roovers <jer@gentoo.org> hunit-1.1-r1.ebuild,
  hunit-1.1.1.ebuild, hunit-1.2.0.0.ebuild:
  Stable for HPPA (bug #230919).

  06 Jul 2008; Markus Meier <maekke@gentoo.org> hunit-1.2.0.0.ebuild:
  amd64/x86 stable, bug #230919

  16 Dec 2007; Samuli Suominen <drac@gentoo.org> hunit-1.1.1.ebuild:
  amd64 stable wrt #201984

  16 Dec 2007; nixnut <nixnut@gentoo.org> hunit-1.1.1.ebuild:
  Stable on ppc wrt bug 201984

*hunit-1.2.0.0 (13 Dec 2007)

  13 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> +hunit-1.2.0.0.ebuild:
  New version.

  13 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> hunit-1.1-r1.ebuild,
  hunit-1.1.1.ebuild:
  Updates for upward compatability with cabal-1.2 and ghc-6.8

  13 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> hunit-1.1.ebuild:
  Remove unnecessary blocker.

  12 Dec 2007; Ferris McCormick <fmccor@gentoo.org> hunit-1.1.1.ebuild:
  Sparc stable --- part of Bug #201984.

  12 Dec 2007; Christian Faulhammer <opfer@gentoo.org> hunit-1.1.1.ebuild:
  quote variable

  12 Dec 2007; Christian Faulhammer <opfer@gentoo.org> hunit-1.1.1.ebuild:
  stable x86, bug 201984

  31 Oct 2007; Duncan Coutts <dcoutts@gentoo.org> hunit-1.1.ebuild:
  Drop virtual/ghc in favour of dev-lang/ghc

  11 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> hunit-1.1.1.ebuild:
  Marked ~ia64.

*hunit-1.1.1 (08 Jul 2007)

  08 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> +hunit-1.1.1.ebuild:
  New version from ghc-6.6.1 extralibs collection.

  08 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> hunit-1.1-r1.ebuild:
  Use dev-lang/ghc rather than virtual/ghc.

  30 Apr 2007; Marius Mauch <genone@gentoo.org> hunit-1.1.ebuild:
  Replacing einfo with elog
