@@ -1,6 +1,8 @@
 DIST HUnit-1.2.0.0.tar.gz 6689 RMD160 4f9522e511fb35ee5de513ff19f5f6f0a5850de0 SHA1 91cdf1bbdff01cdc04948813d0243d57749e5f42 SHA256 3fc27ff83ab3a399367e99647e8a84d34c6e8895b7e89ed32e9934b3ed568e55
+DIST HUnit-1.2.0.3.tar.gz 6849 RMD160 9c3ff1c8d086cb9aff7d27b558964ce931247c1b SHA1 558793b852d3c0e0f2025b60b4b165a80ba34dea SHA256 954f584f7c096c3ddef677e70b3811195bb4fd18dfdb4727a260ca7d7465de12
 DIST ghc-6.6.1-src-extralibs.tar.bz2 1928527 RMD160 1c18c85d978c4b3369132e247c823aaa90ea8530 SHA1 1398f6c35191d52410a2e066b382635dff0d8d6d SHA256 d162a82fc388fdd48c327b09bb6d778f2313d12d5282f3b120ac08a5d4e78902
 EBUILD hunit-1.1.1.ebuild 772 RMD160 15b257ff2abac023528d8a0620f91f4ccbee4089 SHA1 0ab46d5544a62908f7d99ab5bea25649578d8b03 SHA256 1c3f73b6e9b2a8390b1bd4911a8a71eda862411e595c51578e53148564c692e6
 EBUILD hunit-1.2.0.0.ebuild 711 RMD160 6dd0b47d20ba9b600e29b4f7bbf9623f1c689b20 SHA1 2fda8e71e6aaeeb6ef616a1681f7dfa1c3abfdf5 SHA256 b987e9f2b6af17106c72dca55d1e2eea212540782943dadfd7ee0875ec7cac13
-MISC ChangeLog 3488 RMD160 50f042a6fc7041306159f4c8a5e2f9855331e064 SHA1 ddd3874ceccb6bc6b945d9af7c690ab4e132092a SHA256 adbba74e300974fd0c878d9aee76eb43a7b265aa28951055ddb9d575096b076e
+EBUILD hunit-1.2.0.3.ebuild 778 RMD160 de51c9444a0d5ed45a1ac54a5e6cb4456923c884 SHA1 a8c3e2a87a7d9e539cba46ff1504bbd7dec2e928 SHA256 29fbcf9115d9860607c108dbdfc5b0e53c1bbaee448db7328925beab2b45ea57
+MISC ChangeLog 3614 RMD160 0b909128b51b1acb5247a4c5b45fafdb39d23e10 SHA1 1a984654bc92be0feb591c7f5625038e8c733567 SHA256 d7acf95bd75d0578dea8d05c7bbc8b7b8c92b96c777379984f455b026bbdae8a
 MISC metadata.xml 223 RMD160 7783e6057effb8b8f0b79cffe8b557b32c633839 SHA1 7b962c77f2e38479a9d1621ec8d307ca9f761753 SHA256 1d00c8be162a6cb87b3de440b3e63e10b39c12d56e8fbfe592e75aed872b2508
